--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "web3": "^4.0.2",
+    "web3modal": "^1.9.12",
     "yup": "^1.2.0"
   },
   "scripts": {
